Update to Java 11 & Use log4j